--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta property="og:title" content="골드빈라떼 - 프로필 링크">
     <meta property="og:description" content="당신의 하루가 평온하길">
     <meta property="og:image" content="버터퐁 금빈.jpg">
-    <script type="text/javascript"
-            src="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/free/sparta.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <title>Welcome to my world!</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -56,7 +55,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            font-weight : bolder;
+            font-weight: bolder;
         }
 
         .wrap > a {
