--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             height: 100px;
 
             border-radius: 100%;
-            border: 2px solid whitesmoke;
+            border: 2px solid white;
 
             background-image: url('https://wallpaperaccess.com/full/322787.jpg');
             background-position: center;
@@ -34,7 +34,7 @@
         }
 
         .name {
-            color: whitesmoke;
+            color: white;
             font-size: 20px;
 
             margin-top: 20px;
@@ -42,7 +42,7 @@
         }
 
         .hi {
-            color: whitesmoke;
+            color: white;
             font-size: 14px;
             margin-top: 0px;
             margin-bottom: 30px;
